# dirvana

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  config.json  notes.txt  settings.json  todo.txt
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt  _dirvana  _dv
cpp/include/: DirectoryCompleter.h  PathMap.h  RecentlyAccessedCache.h  TerminalHandler.h
cpp/include/caches/: FrequencyBasedCache.h  RecentlyAccessedCache.h
cpp/include/utils/: DoublyLinkedList.h  Node.h
cpp/src/: main.cpp
cpp/src/impl/: DirectoryCompleter.cpp  PathMap.cpp  RecentlyAccessedCache.cpp
cpp/src/impl/caches/: FrequencyBasedCache.cpp  RecentlyAccessedCache.cpp
cpp/src/impl/utils/: DLLTraverser.cpp  DoublyLinkedList.cpp  TerminalHandler.cpp
cpp/tests/: test_DirectoryCompleter.cpp  test_FrequencyBasedCache.cpp  test_PathMap.cpp  test_RecentlyAccessedCache.cpp
devana/devana/: ContentView.swift  devanaApp.swift
devana/devana.xcodeproj/: project.pbxproj
devana/devana.xcodeproj/project.xcworkspace/xcuserdata/jameskendrick.xcuserdatad/: UserInterfaceState.xcuserstate
devana/devana.xcodeproj/xcuserdata/jameskendrick.xcuserdatad/xcschemes/: xcschememanagement.plist
devana/devanaTests/: devanaTests.swift
devana/devanaUITests/: devanaUITests.swift  devanaUITestsLaunchTests.swift
docs/: README.md  install.sh
docs/misc/: todo.txt
docs/scripts/: .zshrc  _dv  dv
docs/util/: move_binary.sh  update_prod_binary.sh
include/: BaseCache.hpp  Config.h  Database.h  DirectoryCompleter.h  Handler.h  PathMap.h
include/caches/: BaseCache.h  BaseCache.hpp  FrequencyBased.hpp  FrequencyBasedCache.h  FrequencyBasedCache.hpp  HistoryCache.h  RecentlyAccessed.hpp  RecentlyAccessedCache.h  RecentlyAccessedCache.hpp  Serializable.h
include/caches/interfaces/: ICache.h  ICache.hpp  IPromotionStrategy.h  ISerializable.h
include/lib/: json.hpp
include/lib/sqlite_modern_cpp/hdr/: sqlite_modern_cpp.h
include/tables/: Paths.h  Shortcuts.h  Table.h
include/utils/: CacheEntry.h  DLLTraverser.h  DoublyLinkedList.h  FBCEntry.h  Helpers.h  Types.h
rs/: Cargo.toml
rs/src/utils/: bk_tree.rs  file_ops.rs  inv_index.rs  mod.rs
scripts/: _dv  move_binary.sh  sample.zshrc  sample_zshrc.zsh
src/: main.cpp  main.rs
src/impl/: Config.cpp  Database.cpp  DirectoryCompleter.cpp  Handler.cpp  PathMap.cpp
src/impl/caches/: FrequencyBasedCache.cpp  HistoryCache.cpp  RecentlyAccessedCache.cpp
src/impl/tables/: Paths.cpp  Shortcuts.cpp  Table.cpp
src/impl/utils/: DoublyLinkedList.cpp  Helpers.cpp  Types.cpp
src/utils/: bk_tree.rs  file_ops.rs  mod.rs  paths.rs
tests/: test.db  test_Database.cpp  test_DirectoryCompleter.cpp  test_DoublyLinkedList.cpp  test_FrequencyBasedCache.cpp  test_Handler.cpp  test_Helpers.cpp  test_HistoryCache.cpp  test_PathMap.cpp  test_RecentlyAccessedCache.cpp  test_Shortcuts.cpp
tests/caches/: test-cache.json  test-refresh-cache.json
tests/configs/: base.json  exclusion.json  refresh.json
tests/utils/: TempConfigFile.hpp
